# nav2_rl_controller

./: CMakeLists.txt  README.md  nav2_rl_controller.xml  package.xml
include/nav2_rl_controller/: rl_controller.hpp
logs/: observations.txt
params/: FollowPath.yaml  default_params.yaml
src/: rl_controller.cpp
test/: log2video.py  pth2onnx.py  test_history.cpp  test_model.py  visualize.py
test/SAC/: SAC.py  SAC_critic.py  SAC_utils.py
